apps/base/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  labels:
    app: forgejo
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/component: server
spec:
  selector:
    app: forgejo
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh
  labels:
    app: forgejo
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/component: ssh
    cilium-lb-pool: apps-pool
  annotations:
    external-dns.alpha.kubernetes.io/hostname: git.seyzahl.com
spec:
  selector:
    app: forgejo
  type: LoadBalancer
  ports:
    - name: ssh
      port: 2222
      targetPort: 2222
      protocol: TCP
