apps/base/forgejo/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: forgejo-app
  namespace: forgejo
spec:
  endpointSelector:
    matchLabels:
      policy-type: app
  ingress:
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: forgejo-runner
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - fromEntities:
        - ingress
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "2222"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - {}
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
        - ports:
            - port: "80"
              protocol: TCP
        - ports:
            - port: "5432"
              protocol: TCP
        - ports:
            - port: "7844"
              protocol: TCP
